--- a/app.json
+++ b/app.json
@@ -1,27 +1,21 @@
 {
-  "name": "HerokuBannedDeployer",
-  "description": "With this you can deploy repos that are banned/blacklisted by heroku",
+  "name": "DeployDat",
+  "description": "heheheha",
   "keywords": [
-    "telegram",
-    "open",
-    "source",
-    "multi",
-    "purpose",
-    "remote",
-    "deployer"
+    "telegram"
   ],
   "env": {
     "OTHER_INSTALLS": {
-      "description": "If you need install packages for running your app(Python is pre-installed).[Space in between each package]",
+      "description": "Needed requirements separated by spaces",
       "value": "None",
       "required": false
     },
     "REPO_URL": {
-      "description": "URL of the REPO that you want to deploy.",
+      "description": "Ogiginal repo",
       "value": ""
     },
     "PYTHON_FILE": {
-      "description": "Name of the python file that you need to run. [use -m if you need to run __main__.py from a folder]",
+      "description": "Name of the python file that you need to run (use -m if you need to run __main__.py)",
       "value": ""
     },
      "OTHER_CMD": {
